Implement a SOAP web service.
The WeatherEndpoint is implemented and published as a SOAP web service
endpoint. Anymore the required WSDL based on the WeatherEndpoint is
generated during build time.